--- a/.github/actions/setup_cache/action.yml
+++ b/.github/actions/setup_cache/action.yml
@@ -14,6 +14,9 @@ runs:
         path: |
           ~/.cache/pip
           ~/.ccache
+        # Make caches updatable by adding `github.run_id` to the key to make the cache unique.
+        # As a result, caches will always be missed, restored from the nearest cache, and saved as a new cache afterwards
+        # See https://github.com/actions/cache/blob/main/tips-and-workarounds.md#update-a-cache for more details
         key: ${{ inputs.key }}-${{ hashFiles('**/CMakeLists.txt') }}-${{ github.run_id }}
         restore-keys: |
           ${{ inputs.key }}-${{ hashFiles('**/CMakeLists.txt') }}
