fix(ci): Specify bash when running `conan build`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,6 +134,7 @@ jobs:
           build_type: ${{ matrix.build_type }}
 
       - name: Configure, build and test
+        shell: bash
         run: |
           conan build . ${{ steps.conan.outputs.args }} \
             -c "tools.cmake.cmaketoolchain:extra_variables*={'ENABLE_DEVELOPER_MODE': {'value': '${{ matrix.developer_mode }}',        'cache': True, 'type': 'BOOL', 'docstring': 'Set up defaults for a developer of the project, and let developer change options'}}" \
