--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -109,7 +109,7 @@ jobs:
       - name: Configure, build and test
         shell: bash
         run: |
-          conan build . ${{ steps.conan.outputs.args }} \
+          conan build . ${{ steps.conan.outputs.args }} -b missing \
             -c "tools.cmake.cmaketoolchain:extra_variables*={'ENABLE_DEVELOPER_MODE'          : {'value': '${{ matrix.developer_mode }}',        'cache': True, 'type': 'BOOL', 'docstring': 'Set up defaults for a developer of the project, and let developer change options'}}" \
             -c "tools.cmake.cmaketoolchain:extra_variables*={'OPT_ENABLE_CLANG_TIDY'          : {'value': 'OFF',                                 'cache': True, 'type': 'BOOL', 'docstring': 'Enable clang-tidy analysis during compilation'}}" \
             -c "tools.cmake.cmaketoolchain:extra_variables*={'OPT_ENABLE_CPPCHECK'            : {'value': 'OFF',                                 'cache': True, 'type': 'BOOL', 'docstring': 'Enable cppcheck analysis during compilation'}}" \
