feat(ci): Enable ci for all branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,7 @@ on:
     types: [published]
   push:
     tags: "*"
-    branches:
-      - main
-      - develop
+    branches: "*"
   workflow_dispatch:
 
 jobs:
