feat(ci): Enable all actions for all branches [skip ci]

--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -3,9 +3,7 @@ on:
   pull_request:
   push:
     tags: "*"
-    branches:
-      - main
-      - develop
+    branches: "*"
   workflow_dispatch:
 
 jobs:
